Test de l'optimisateur (équipement et nourriture)